--- a/templates/petanqueapp/index.html
+++ b/templates/petanqueapp/index.html
@@ -6,6 +6,9 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
+  <style media="screen">
+    .submit-match-button {color:green}
+  </style>
   <body>
     <h1>Samsømesterskaberne i Petanque</h1>
     <div class="" id="leaderboard-container">
@@ -39,7 +42,7 @@
                   <td><input type="number" name="player2score" value=""></td>
                   <td>{{ m.player3 }}</td>
                   <td><input type="number" name="player3score" value=""></td>
-                  <td><input type="submit" id="button submit-match-{{ m.id }}-button" name="submit-button" value="{{ m.id }}"></input></td>
+                  <td><input class="submit-match-button" type="submit" id="button submit-match-{{ m.id }}-button" name="submit-button" value="{{ m.id }}"></input></td>
                 </tr>
               </form>
             {% endfor %}
