gitignore + opp_score as 3rd tiebreaker

--- a/templates/petanqueapp/index.html
+++ b/templates/petanqueapp/index.html
@@ -27,6 +27,7 @@
                 <td>{{ p.name }}</td>
                 <td>{{ p.match_points }}</td>
                 <td>{{ p.total_points }}</td>
+                <td>{{ p.opp_score }}</td>
               </tr>
             {% endfor %}
           </tbody>
